--- a/Website/Mur_Image_SiteWeb/Frontend/package.json
+++ b/Website/Mur_Image_SiteWeb/Frontend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-image-crop": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
