--- a/Website/Backend/.env
+++ b/Website/Backend/.env
@@ -6,7 +6,7 @@
 
 # reference these in your code with process.env.SECRET
 
-IMGURTOKEN="b81882edbe7fb55404a1bf9f59d39ac18113e1f9"
+IMGURTOKEN="YOURSECRETTOKENHERE"
 PORT=4800
  
 # note: .env is a shell file so there can't be spaces around =
